--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zacard-cvx",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "convert tree xlsx import into vxe-grid metadata",
   "main": "lib/index.js",
   "scripts": {
@@ -9,6 +9,12 @@
   "dependencies": {
     "xlsx": "0.15.6"
   },
+  "files": [
+    "lib",
+    "examples",
+    "package.json",
+    "yarn.lock"
+  ],
   "directories": {
     "lib": "lib",
     "test": "test"
